Added a few problems and renamed q3 and q1

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,17 @@
 /Bonetrousle.class
 /AlgorithmicCrush$SegmentTreeWithLazyProp.class
 /AlmostSorted$FastReader.class
+/StartProgram$FastReader.class
+/StartProgram.class
+/CodingBootCamp.class
+/cj7$FastReader.class
+/cj7$node.class
+/cj7.class
+/CodingBootCamp$1.class
+/CodingBootCamp$2.class
+/CodingBootCamp$FastReader.class
+/CodingBootCamp$node.class
+/XRangeAndStrings.class
+/XRangeAndStrings$node.class
+/OrganizingContainerOfBalls$FastReader.class
+/OrganizingContainerOfBalls.class
