Added a few problems and renamed q3 and q1

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@
 /XRangeAndStrings$node.class
 /OrganizingContainerOfBalls$FastReader.class
 /OrganizingContainerOfBalls.class
+/GCDMatrix$FastReader.class
+/GCDMatrix.class
